Fixed broken CSS links after ExtJS upgrade

--- a/django-project-management/new_site_media/css/projects.css
+++ b/django-project-management/new_site_media/css/projects.css
@@ -40,11 +40,11 @@
 .rag_status_white-hover { background-color:#EFEFEF; color: white; padding:5px; }
 
 
-.icon-add { background-image:url(/site_media/js/extjs/examples/shared/icons/fam/add.png) !important; } 
-.icon-update { background-image:url(/site_media/js/extjs/examples/shared/icons/fam/cog_edit.png) !important; } 
-.icon-complete { background-image:url(/site_media/js/extjs/examples/shared/icons/fam/delete.gif) !important; } 
+.icon-add { background-image:url(/site_media/js/ext-3.2.0/examples/shared/icons/fam/add.png) !important; } 
+.icon-update { background-image:url(/site_media/js/ext-3.2.0/examples/shared/icons/fam/cog_edit.png) !important; } 
+.icon-complete { background-image:url(/site_media/js/ext-3.2.0/examples/shared/icons/fam/delete.gif) !important; } 
 
-.upload-icon { background: url('/site_media/js/extjs/examples/shared/icons/fam/image_add.png') no-repeat 0 0 !important; }
+.upload-icon { background: url('/site_media/js/ext-3.2.0/examples/shared/icons/fam/image_add.png') no-repeat 0 0 !important; }
 
 .content {font-family:arial,tahoma,helvetica,sans-serif; font-size:11px; font-size-adjust:none; font-style:normal; font-variant:normal; font-weight:normal;}
 .content strong {font-family:arial,tahoma,helvetica,sans-serif; font-size:13px; font-size-adjust:none; font-variant:normal; font-weight: bold;}
